--- a/minpy_getting_started.ipynb
+++ b/minpy_getting_started.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "Note that classic simplex search methods do not use values of objective function to calculate reflection/expantion/contraction coefficients. Those coefficients are the same for all vertices, whereas in NM-stochastic the distance each vertex will travel depends on the difference between objective function value and average value across all vertices $(f(u_j^i)-c_j)$\n",
     "In the above algorithm simlex may collapse into a nearly degenerate figure. The usually proposed remedy is to restart the simlex every once in a while.  Note that only initial vertices are randomly generated, and the path of all subsequent vertices is deterministic. \n",
-    "In the next variant of the algorithm we will maintain the randomness of vertices on each step, while adjusting the distribution of $U_0$ to mimic the pattern of the modified vertices. The corrected algorithm has much higher exploration power than the first algorithm (similar to the exploration power of random search algorithms), and has exploitation power of direct - search algorithms.\n",
+    "In the next variant of the algorithm we will maintain the randomness of vertices on each step, while adjusting the distribution of $U_0$ to mimic the pattern of the modified vertices. The corrected algorithm has much higher exploration power than the first algorithm (similar to the exploration power of random search algorithms), and has exploitation power of pattern search algorithms.\n",
     "\n",
     "\n",
     "Steps of NM - nonlocal\n",
