--- a/minpy_getting_started.ipynb
+++ b/minpy_getting_started.ipynb
@@ -183,16 +183,16 @@
    "metadata": {},
    "source": [
     "Initialization: \n",
-    " Generating $K\\geq n$ separate realizations of $u_0^i$, i=1,..K of the random vector $U_0$\n",
-    "update_m: Compute  center of mass of initial simplex\n",
-    " $$m_0=\\frac{1}{K} \\sum_{i=0}^{K} u_0^i$$\n",
-    "update_c: Compute mean level of objective \n",
+    " Generating $K\\geq n$ separate realizations of $u_0^i$, i=1,..K of the random vector $U_0$ \n",
+    " update m: Compute  center of mass of initial simplex \n",
+    " $$m_0=\\frac{1}{K} \\sum_{i=0}^{K} u_0^i$$ \n",
+    "update c: Compute mean level of objective \n",
     " $$c_{j-1}=\\frac{1}{K} \\sum_{i=1}^K f(u_{j-1}^i)$$\n",
-    "update_simplex: Compute new set of vertices $$u_j^i= m_{j-1}+\\epsilon_{j-1} (f(u_{j-1}^i)-c_{j-1})\\frac{  m_{j-1} -u_{j-1}^i}  {||m_{j-1} -u_{j-1}^i ||^n }$$\n",
-    "update_m: Compute  center of mass at step $j$\n",
+    "update simplex: Compute new set of vertices $$u_j^i= m_{j-1}+\\epsilon_{j-1} (f(u_{j-1}^i)-c_{j-1})\\frac{  m_{j-1} -u_{j-1}^i}  {||m_{j-1} -u_{j-1}^i ||^n }$$\n",
+    "update m: Compute  center of mass at step $j$\n",
     " $$m_j=\\frac{1}{K} \\sum_{i=0}^{K} u_j^i$$\n",
     "\n",
-    "adjust_step: Adjust the step size $\\epsilon_{j-1}$ so that $f(m_j)<f(m_{j-1})$. If approximate $\\epsilon _{j-1}$ cannot be obtained within the specified number of trails, then set $m_k=m_{j-1}$ \n",
+    "adjust step: Adjust the step size $\\epsilon_{j-1}$ so that $f(m_j)<f(m_{j-1})$. If approximate $\\epsilon _{j-1}$ cannot be obtained within the specified number of trails, then set $m_k=m_{j-1}$ \n",
     "\n",
     "stop: Check termination criterion - sample standard deviation: $$D_j=(\\frac{1}{K-1} \\sum_{i=1}^K (f(u_j^i)-c_j)^2)^{1/2}$$"
    ]
