--- a/minpy_getting_started.ipynb
+++ b/minpy_getting_started.ipynb
@@ -152,8 +152,8 @@
     "Adjust the step size $\\epsilon_{j-1}$ so that $f(m_j)<f(m_{j-1})$. If approximate $\\epsilon _{j-1}$ cannot be obtained within the specified number of trails, then set $m_k=m_{j-1}$ \n",
     "\n",
     "c.Use sample standard deviation as termination criterion: $$D_j=(\\frac{1}{K-1} \\sum_{i=1}^K (f(u_j^i)-c_j)^2)^{1/2}$$\n",
-    "\n",
-    "references\n",
+    "\n"
+    "good reading on basic concepts of potential theory \n",
     "https://www.damtp.cam.ac.uk/user/reh10/lectures/nst-mmii-chapter2.pdf"
    ]
   },
