--- a/minpy_getting_started.ipynb
+++ b/minpy_getting_started.ipynb
@@ -226,6 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "note: sample implementation of adjust_step() may be found in minpy_getting _started.py \n",
     "we apply this algorithm to Sphere function in 3d and to Shor function in 5d"
    ]
   },
