--- a/minpy_getting_started.ipynb
+++ b/minpy_getting_started.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "source": [
     "we apply this algorithm to Sphere function in 3d and to Shor function in 5d ",
-    " (note: sample implementation of adjust_step() may be found in minpy_getting _started.py)
+    " (note: sample implementation of adjust_step() may be found in minpy_getting _started.py)"
    ]
   },
   {
