fixes to notebook

--- a/scripts/minpy_getting_started.ipynb
+++ b/scripts/minpy_getting_started.ipynb
@@ -93,7 +93,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an instance of minpy.Minimization class, and call the optimization method (minimize_NM is stochastic extention of Nelder and Mead algorithm)"
+    "As you can see spphere function's minimum value is 0, achieved at (0,0). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we create an instance of minpy.Minimization class, and call the optimization method (minimize_NM is stochastic extention of Nelder and Mead algorithm). then we can compare the result of optimization with optimal value we expect to see."
    ]
   },
   {
