--- a/scripts/minpy_getting_started.ipynb
+++ b/scripts/minpy_getting_started.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see spphere function's minimum value is 0, achieved at (0,0). "
+    "As you can see sphere function's minimum value is 0, achieved at (0,0). "
    ]
   },
   {
